--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
         "next-mdx-remote-client": "^2.1.2",
         "next-themes": "^0.2.1",
         "postcss": "8.4.31",
-        "react": "19.0.0",
-        "react-dom": "19.0.0",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-tweet": "^3.2.0",
         "reading-time": "^1.5.0",
         "rehype-highlight": "^7.0.0",
@@ -46,6 +46,7 @@
         "sharp": "^0.33.1",
         "sonner": "^2.0.5",
         "tailwindcss": "next",
+        "three": "^0.179.0",
         "typescript": "5.1.6"
     },
     "devDependencies": {
@@ -53,6 +54,7 @@
         "@commitlint/config-conventional": "^19.6.0",
         "@ianvs/prettier-plugin-sort-imports": "latest",
         "@tailwindcss/typography": "^0.5.9",
+        "@types/three": "^0.178.1",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "commitizen": "^4.3.1",
